--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> 
-        <h1 class="sitename">Lonely</h1>-->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <h1 class="sitename">MONICAH</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -222,7 +222,7 @@
                 With a wealth of experience and a client-centered approach, I stands as a trusted advocate committed to protecting rights and securing justice.
               </p>
               <p class="py-3">
-                Her practice spans a comprehensive range of legal areas—from safeguarding intellectual property and meticulously drafting and reviewing contracts, to ensuring digital rights compliance and developing effective revenue strategies. My expertise also encompasses robust dispute resolution and litigation support.
+                My practice spans a comprehensive range of legal areas—from safeguarding intellectual property and meticulously drafting and reviewing contracts, to ensuring digital rights compliance and developing effective revenue strategies. My expertise also encompasses robust dispute resolution and litigation support.
               </p>
               <p class="py-3">
                 Whether you are facing complex legal challenges or seeking proactive legal advice, My tailored approach ensures that your rights are well protected and your legal interests are served.
