--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="450" data-aos-duration="1200">
           <i class="bi bi-envelope flex-shrink-0"></i>
           <div>
-            <h3>Email Us</h3>
+            <h3>Email Me</h3>
             <p>monicahaulga@gmail.com</p>
           </div>
         </div><!-- End Info Item -->
@@ -489,7 +489,7 @@
   </main>
   <footer id="footer" class="footer light-background">
     <div class="container">
-      <h3 class="sitename">MORNICAOKOMO</h3>
+      <h3 class="sitename">MORNICA OKOMO</h3>
       <p>Dedicated to safeguarding your rights and delivering justice with expertise and compassion. Committed to excellence in legal advocacy.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="#"><i class="bi bi-twitter"></i></a>
