--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="col-lg-8 content">
               <h2>MORNICA OKOMO – Advocate</h2>
               <p class="fst-italic py-3">
-                With a wealth of experience and a client-centered approach, I stands as a trusted advocate committed to protecting rights and securing justice.
+                With a wealth of experience and a client-centered approach, I stand as a trusted advocate committed to protecting rights and securing justice.
               </p>
               <p class="py-3">
                 My practice spans a comprehensive range of legal areas—from safeguarding intellectual property and meticulously drafting and reviewing contracts, to ensuring digital rights compliance and developing effective revenue strategies. My expertise also encompasses robust dispute resolution and litigation support.
